# plugin_tutorial_solutions

./: README.md  pyproject.toml
cool_plugins/plugins/modules/algorithms/: cloud_masked_data.py  my_cloud_depth.py  my_cloud_depth_dict.py
cool_plugins/plugins/modules/colormappers/: colorful_cloud_height.py
cool_plugins/plugins/modules/output_formatters/: my_netcdf_output.py
cool_plugins/plugins/yaml/feature_annotators/: tutorial.yaml
cool_plugins/plugins/yaml/gridline_annotators/: tutorial.yaml
cool_plugins/plugins/yaml/products/: my_abi_products.yaml  my_clavrx_products.yaml  my_layered_products.yaml
cool_plugins/plugins/yaml/sectors/static/: my_conus_sector.yaml
docs/source/releases/: latest.rst
my_package/: registered_plugins.json
plugin_tutorial_solution/plugins/yaml/products/: my_clavrx_products.yaml
tests/: test_all.sh
tests/scripts/: clavrx.conus_annotated.cloud-base-ascii-colors.sh  clavrx.conus_annotated.cloud-base-builtin-colors.sh  clavrx.conus_annotated.cloud-base-python-colors.sh  clavrx.conus_annotated.my-cloud-base-height.sh  clavrx.conus_annotated.my-cloud-depth.sh  clavrx.conus_annotated.my-cloud-top-height.sh  clavrx.conus_annotated_features_gridlines.my-cloud-depth.sh  clavrx.conus_netcdf.my-cloud-depth-netcdf.sh  clavrx.conus_netcdf.my-cloud-top-height-my-netcdf.sh  clavrx.goes16_annotated.my-cloud-base-height.sh  clavrx.goes16_clean.my-cloud-base-height.sh  clavrx.goes16_clean.my-cloud-top-height.sh  clavrx.imagery_annotated.cloud-depth-alg-interp-cmap.sh  clavrx.japan_annotated.my-cloud-base-height.sh  clavrx.japan_annotated.my-cloud-depth-reread.sh  clavrx.japan_annotated.my-cloud-depth.sh  clavrx.japan_annotated.my-cloud-top-height.sh  clavrx.japan_netcdf.my-cloud-depth-netcdf copy.sh  clavrx.my_conus_sector.my-cloud-top-height.sh  clavrx.unprojected_image.cloud-depth-alg-cmap.sh  data_fusion_alg_netcdf.sh  data_fusion_layered.sh  data_fusion_layered_modified_colorbar.sh  data_fusion_layered_viirs.sh
tutorial_solution/plugins/modules/algorithms/: my_cloud_depth.py
tutorial_solution/plugins/yaml/products/: my_clavrx_products.yaml
